# WFiIS-IMN-2019

./: .gitignore  CMakeLists.txt
Lab01/: main.cpp  plots.sh
Lab02/: main.cpp  plots.sh
Lab03/: main.cpp  plots.sh
Lab04/: main.cpp  plots.sh
Lab05/: main.cpp  plots.sh
utils/: files_operations.h
